Changing temporary directory results in errors with tiles while rendering in Cycles #93727

Closed
opened 2021-12-06 00:40:36 +01:00 by Alaska · 20 comments
Member

System Information
Operating system: Linux-5.15.0-2-amd64-x86_64-with-glibc2.32 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.44

Blender Version
Broken version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557
Broken version: 3.1.0 Alpha, branch: master, commit date: 2021-12-05 22:15, hash: 0a8a22fc04
Worked: Unsure as this feature was introduced in Blender 3.0

Short description of error
If you change the temporary directory in preferences and try to render a Cycles scene with tiles, you will receive an error once the first tile is complete.

Error writing tile to file

Exact steps for others to reproduce the error

  1. From the top of Blender select Edit -> Preferences
  2. Navigate to the File Paths tab.
  3. Change the directory of Temporary Files to a different folder folder.
  4. Change the render engine to Cycles and increase the resolution or decrease the tile size so tiles are used.
  5. Render the scene and after the first tile is complete you should receive the error Error writing tile to file.
**System Information** Operating system: Linux-5.15.0-2-amd64-x86_64-with-glibc2.32 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.44 **Blender Version** Broken version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` Broken version: 3.1.0 Alpha, branch: master, commit date: 2021-12-05 22:15, hash: `0a8a22fc04` Worked: Unsure as this feature was introduced in Blender 3.0 **Short description of error** If you change the temporary directory in preferences and try to render a Cycles scene with tiles, you will receive an error once the first tile is complete. > Error writing tile to file **Exact steps for others to reproduce the error** 1. From the top of Blender select `Edit -> Preferences` 2. Navigate to the `File Paths` tab. 3. Change the directory of `Temporary Files` to a different folder folder. 4. Change the render engine to Cycles and increase the resolution or decrease the tile size so tiles are used. 5. Render the scene and after the first tile is complete you should receive the error `Error writing tile to file`.

#94211 was marked as duplicate of this issue

#94211 was marked as duplicate of this issue

#93992 was marked as duplicate of this issue

#93992 was marked as duplicate of this issue

#93973 was marked as duplicate of this issue

#93973 was marked as duplicate of this issue
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Can not reproduce here on master (3f7014ecc9d5)

Hi Alaska, does this happen with both CPU, GPU?

System Information

Graphics card : AMD Radeon(TM) 535 ATI Technologies .```
Can not reproduce here on master (`3f7014ecc9d5`) Hi Alaska, does this happen with both CPU, GPU? **System Information** ```Operating system : Windows-10-10.0.18362-SP0 64 Bits Graphics card : AMD Radeon(TM) 535 ATI Technologies .```
Author
Member

In #93727#1265895, @PratikPB2123 wrote:
Hi Alaska, does this happen with both CPU, GPU?

I can reproduce it on my CPU, and GPU (both CUDA and OptiX).

I have done some further investigation and found that more steps are required to reproduce this issue. I have updated my report to contain the extra information.

> In #93727#1265895, @PratikPB2123 wrote: > Hi Alaska, does this happen with both CPU, GPU? I can reproduce it on my CPU, and GPU (both CUDA and OptiX). I have done some further investigation and found that more steps are required to reproduce this issue. I have updated my report to contain the extra information.
Member

Thanks, I can reproduce now. Only happens when I assign a path for Temporary files.
I am not sure if Factory preferences are responsible for this error to appear (it will just clear the given path)

To reproduce error, I did:

  • Open default blend file
  • Assign path for Temporary Files
  • Switch render engine to Cycles
  • Decrease tile size
  • Render as Image
Thanks, I can reproduce now. Only happens when I assign a path for `Temporary files`. I am not sure if Factory preferences are responsible for this error to appear (it will just clear the given path) To reproduce error, I did: - Open default blend file - Assign path for `Temporary Files` - Switch render engine to Cycles - Decrease tile size - Render as Image
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @brecht

Added subscriber: @brecht

The problem is that we initialize the temporary path for cycles only on add-on init, and if it changes the directory does not exist anymore.

The easy fix would be to just update the temp path on every render, but that's not correct if there are multiple renders running at the same time, so needs something a bit smarter.

The problem is that we initialize the temporary path for cycles only on add-on init, and if it changes the directory does not exist anymore. The easy fix would be to just update the temp path on every render, but that's not correct if there are multiple renders running at the same time, so needs something a bit smarter.

Marking a few bugs as high priority with the aim of fixing them for 3.1.

Marking a few bugs as high priority with the aim of fixing them for 3.1.
Member

Added subscriber: @BiOzZ

Added subscriber: @BiOzZ
Member

Added subscriber: @choudharyrakesh1298

Added subscriber: @choudharyrakesh1298
Alaska changed title from Load Factory Preferences results in errors with tiles while rendering in Cycles to Changing temporary directory results in errors with tiles while rendering in Cycles 2021-12-18 01:22:56 +01:00

Added subscriber: @Wovchick

Added subscriber: @Wovchick
Member

Added subscriber: @RobbinBob

Added subscriber: @RobbinBob

Added subscriber: @Maradon

Added subscriber: @Maradon
Sergey Sharybin self-assigned this 2022-01-10 14:43:18 +01:00

This issue was referenced by blender/cycles@4081365cf7

This issue was referenced by blender/cycles@4081365cf723ffda9472d9cee4efbe02fe02410b

This issue was referenced by 292c2cefe3

This issue was referenced by 292c2cefe30b3b4798324e0f04e3a4a529829c94

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93727
No description provided.